before trying parallel

--- a/test.ipynb
+++ b/test.ipynb
@@ -60,40 +60,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1], [2], [3], [4], [5]]-----------------------\n",
-      "with 1 members: 2616 classes\n",
-      "with 2 members: 2270 classes\n",
-      "with 3 members: 1560 classes\n",
-      "with 4 members: 960 classes\n",
-      "with 5 members: 125 classes\n",
-      "with 6 members: 250 classes\n",
-      "with 8 members: 420 classes\n",
-      "with 10 members: 300 classes\n",
-      "with 12 members: 70 classes\n",
-      "with 13 members: 60 classes\n",
-      "with 14 members: 70 classes\n",
-      "with 20 members: 15 classes\n",
-      "with 24 members: 5 classes\n",
-      "with 30 members: 20 classes\n",
-      "with 32 members: 30 classes\n",
-      "with 42 members: 10 classes\n",
-      "with 120 members: 1 classes\n",
-      "[[1, 2], [3], [4], [5]]-----------------------\n",
-      "with 1 members: 16372 classes\n",
-      "with 2 members: 4737 classes\n",
-      "with 3 members: 687 classes\n",
-      "with 6 members: 229 classes\n",
-      "[[1, 2], [3, 4], [5]]-----------------------\n",
-      "with 1 members: 29281 classes\n",
-      "[[1, 2, 3], [4, 5]]-----------------------\n",
-      "with 1 members: 29281 classes\n"
+      "Generated all DAGs!\n",
+      "[[1], [2], [3], [4]]-----------------------\n",
+      "Number groups with 1 member(s): 59 classes\n",
+      "Number groups with 2 member(s): 48 classes\n",
+      "Number groups with 3 member(s): 36 classes\n",
+      "Number groups with 4 member(s): 19 classes\n",
+      "Number groups with 6 member(s): 4 classes\n",
+      "Number groups with 8 member(s): 12 classes\n",
+      "Number groups with 10 member(s): 6 classes\n",
+      "Number groups with 24 member(s): 1 classes\n",
+      "[[1, 2], [3], [4]]-----------------------\n",
+      "Number groups with 1 member(s): 405 classes\n",
+      "Number groups with 2 member(s): 69 classes\n",
+      "[[1, 2, 3], [4]]-----------------------\n",
+      "Number groups with 1 member(s): 543 classes\n",
+      "[[1, 2, 3, 4]]-----------------------\n",
+      "Number groups with 1 member(s): 543 classes\n"
      ]
     }
    ],
@@ -102,9 +92,10 @@
     "from multiprocessing.sharedctypes import Value\n",
     "import networkx as nx\n",
     "from itertools import combinations\n",
+    "from joblib import Parallel, delayed\n",
     "\n",
     "# parameters\n",
-    "nodes = [4,5]\n",
+    "nodes = [4]\n",
     "\n",
     "\n",
     "# helping functions\n",
@@ -243,7 +234,7 @@
     "        # save results\n",
     "        print(str(ptt) + \"-----------------------\")\n",
     "        for k in sorted(counts.keys()):\n",
-    "            print(f'with {k} members: {counts[k]} classes')"
+    "            print(f'Number groups with {k} member(s): {counts[k]} classes')"
    ]
   }
  ],
